# Pnc

./: .env.example  .pre-commit-config.yaml  .prospector.yaml  README.md  alembic.ini  docker-compose.dev.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2022_08_05_181200_fcabe49df597_init.py
api/v1/endpoints/: chars.py
app/: main.py
app/api/: base.py  settings.py
app/api/v1/: api.py
app/api/v1/endpoints/: chars.py
app/db/: __init__.py  session.py
app/dto/: enum.py
app/models/: __init__.py  chars.py
db/sqltypes/: uuid.py
front/templates/: index.html
models/: chars.py
